# thin_drivers

./: .gitignore  LICENSE  README.md
thin_bluebattery/: CMakeLists.txt  package.xml
thin_bluebattery/src/: serial.c  serial.h  thin_bluebattery_node.cpp
thin_capybara/: CMakeLists.txt  package.xml
thin_capybara/src/: capybara_robot.cpp  capybara_robot.h  serial.c  thin_capybara_test.cpp
thin_hokuyo/: CMakeLists.txt  package.xml
thin_hokuyo/src/: hokuyo.c  hokuyo.h  thin_hokuyo_node.cpp  thin_hokuyo_test.c
thin_joystick_teleop/: CMakeLists.txt  package.xml
thin_joystick_teleop/src/: joy_event_scanner.cpp  joy_teleop_node.cpp
thin_kinect/: CMakeLists.txt  package.xml
thin_kinect/cmake_modules/: Findlibfreenectsync.cmake
thin_kinect/src/: thin_kinect_node.cpp  thin_kinect_node.cpp~  thin_kinect_test.c
thin_kobuki/: CMakeLists.txt  package.xml
thin_kobuki/src/: thin_kobuki_node.cpp
thin_kobuki/src/thin_kobuki_library/: CMakeLists.txt  kobuki_protocol.cpp  kobuki_protocol.cpp~  kobuki_protocol.h  kobuki_robot.cpp  kobuki_robot.h  thin_kobuki_file_test.cpp  thin_kobuki_test.cpp
thin_pioneer/: CMakeLists.txt  package.xml
thin_pioneer/src/: CMakeLists.txt  thin_pioneer_node.cpp
thin_pioneer/src/thin_pioneer_library/: CMakeLists.txt  carmen_get_time.c  carmen_get_time.h  carmenserial.c  pioneer_lib.c  pioneer_lib.h  pioneer_robot.cpp  pioneer_robot.h  thin_pioneer_test.cpp
thin_state_publisher/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
thin_state_publisher/src/: CMakeLists.txt  CMakeLists.txt~
thin_state_publisher/src/globals/: CMakeLists.txt  CMakeLists.txt~  defs.h  defs.h~  system_utils.cpp  system_utils.h
thin_state_publisher/src/ros_utils/: CMakeLists.txt  CMakeLists.txt~  thin_message_dumper_node.cpp  thin_state_publisher_node.cpp
thin_state_publisher/src/ros_wrappers/: CMakeLists.txt  CMakeLists.txt~  image_message_listener.cpp  image_message_listener.h  imu_interpolator.cpp  imu_interpolator.h  odom_tf_publisher.cpp  odom_tf_publisher.h  ros_utils.cpp  ros_utils.cpp~  ros_utils.h  ros_utils.h~
thin_state_publisher/src/txt_io/: CMakeLists.txt  CMakeLists.txt~  base_image_message.cpp  base_image_message.h  base_message.cpp  base_message.h  base_sensor_message.cpp  base_sensor_message.h  message_dumper_trigger.cpp  message_dumper_trigger.cpp~  message_dumper_trigger.h  message_enlister_trigger.cpp  message_enlister_trigger.cpp~  message_enlister_trigger.h  message_enqueuer_trigger.h  message_factory.cpp  message_factory.h  message_reader.cpp  message_reader.h  message_writer.cpp  message_writer.h  pinhole_image_message.cpp  pinhole_image_message.h  property.cpp  property.h  sensor_message_sorter.cpp  sensor_message_sorter.h  static_transform_message.cpp  static_transform_message.h  static_transform_tree.cpp  static_transform_tree.h  static_transform_tree_test.cpp  tf_overrider_trigger.cpp  tf_overrider_trigger.h  txt_io_dump_reader_app.cpp
thin_xsens/: CMakeLists.txt  LICENSE  README  package.xml
thin_xsens/mtsdk/: CMakeLists.txt  README  example_calib.cpp  example_orientation.cpp
thin_xsens/mtsdk/include/: conio.h  deviceclass.h
thin_xsens/mtsdk/src/: conio.cpp  deviceclass.cpp
thin_xsens/mtsdk/xcommunication/: CMakeLists.txt
thin_xsens/mtsdk/xcommunication/include/: int_xsdatapacket.h  iointerface.h  iointerfacefile.h  iprotocolhandler.h  legacydatapacket.h  messagelocation.h  mtwsdidata.h  packetfixeddata.h  packetstamper.h  protocolhandler.h  serialinterface.h  streaminterface.h  synclinemk4.h  usbinterface.h  xcommunicationconfig.h  xslibusb.h  xsudev.h  xswinusb.h
thin_xsens/mtsdk/xcommunication/src/: enumerateusbdevices.cpp  int_xsdatapacket.cpp  iointerface.cpp  iointerfacefile.cpp  legacydatapacket.cpp  mtwsdidata.cpp  packetfixeddata.cpp  packetstamper.cpp  protocolhandler.cpp  serialinterface.cpp  synclinemk4.c  usbinterface.cpp  xslibusb.cpp  xsudev.cpp
thin_xsens/mtsdk/xstypes/: CMakeLists.txt
thin_xsens/mtsdk/xstypes/include/xsens/: pstdint.h  resource.h  xsanalogindata.h  xsarray.h  xsatomicint.h  xsbaud.h  xsbaudcode.h  xsbaudrate.h  xsbusid.h  xsbytearray.h  xscalibrateddata.h  xscontrolline.h  xscopy.h  xsdataformat.h  xsdataidentifier.h  xsdatapacket.h  xsdebugcounters.h  xsdeviceid.h  xsdeviceidarray.h  xsdeviceidlist.h  xsdid.h  xseuler.h  xsexception.h  xsfilepos.h  xsgpspvtdata.h  xsinforequest.h  xsint64array.h  xsintarray.h  xsintlist.h  xslibraryloader.h  xsmalloc.h  xsmath.h  xsmatrix.h  xsmatrix3x3.h  xsmessage.h  xsmessagearray.h  xsmessagelist.h  xsoutputconfiguration.h  xsoutputconfigurationarray.h  xsoutputconfigurationlist.h  (+38 more)
thin_xsens/mtsdk/xstypes/src/: xsarray.c  xsbaud.c  xsbytearray.c  xscalibrateddata.c  xsdatapacket.c  xsdeviceid.c  xsdeviceidarray.c  xseuler.c  xsgpspvtdata.c  xsint64array.c  xsintarray.c  xslibraryloader.c  xsmalloc.c  xsmath.c  xsmatrix.c  xsmatrix3x3.c  xsmessage.c  xsmessagearray.c  xsoutputconfiguration.c  xsoutputconfigurationarray.c  xsportinfo.c  xsportinfoarray.c  xsquaternion.c  xsrange.c  xsresultvalue.c  xsrssi.c  xssdidata.c  xsstring.c  xsstringarray.c  xssyncsetting.c  xssyncsettingarray.c  xsthread.c  xstime.c  xstimestamp.c  xstriggerindicationdata.c  xstypedefs.c  xsvector.c  xsvector3.c  xsversion.c
thin_xsens/src/: thin_xsens_node.cpp
thin_xtion/: CMakeLists.txt  LICENSE  README.md  package.xml
thin_xtion/src/: thin_xtion_node.cpp  thin_xtion_node.cpp~  xtionberry_node.cpp~
